Replaced Steemit with Whaleshares in English titles and messages, changed the front page tagline, small fixes

--- a/src/app/assets/static/manifest.json
+++ b/src/app/assets/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Steemit",
-  "short_name": "Steemit",
+  "name": "Whaleshares",
+  "short_name": "Whaleshares",
   "start_url": "/",
   "display": "standalone",
   "gcm_sender_id": "724829305784",
