--- a/src/app/assets/static/manifest.json
+++ b/src/app/assets/static/manifest.json
@@ -2,6 +2,18 @@
   "name": "Whaleshares",
   "short_name": "Whaleshares",
   "start_url": "/",
+  "icons": [
+      {
+          "src": "/images/favicons/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "/images/favicons/android-chrome-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+      }
+  ],
   "display": "standalone",
   "gcm_sender_id": "724829305784",
   "gcm_user_visible_only": true
