--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@sendgrid/mail": "^6.2.1",
     "@steem/crypto-session": "git+https://github.com/steemit/crypto-session.git#83a90b319ce5bc6a70362d52a15a815de7e729bb",
+    "@whaleshares/wlsjs": "^0.1.0",
     "assert": "^1.3.0",
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.22.2",
@@ -128,7 +129,6 @@
     "sequelize-cli": "^2.3.1",
     "speakingurl": "^9.0.0",
     "sqlite3": "^3.1.8",
-    "steem": "github:steemit/steem-js#72a36c835a74f446da47e36feea5d5f1f4dde55b",
     "store": "^1.3.20",
     "style-loader": "^0.18.2",
     "svg-inline-loader": "^0.8.0",
@@ -182,7 +182,7 @@
     "fsevents": "*"
   },
   "engines": {
-    "node": ">=7.0.0",
+    "node": ">=8.0.0",
     "npm": ">=5.4.2"
   }
 }
