--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "mixpanel": "^0.5.0",
     "mysql": "^2.10.2",
     "net": "^1.0.2",
+    "node-emoji": "^1.8.1",
     "node-sass": "^4.5.3",
     "os": "^0.1.1",
     "picturefill": "^3.0.2",
