--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "diff-match-patch": "^1.0.0",
     "disk-stat": "^1.0.4",
     "ecurve": "^1.0.2",
+    "emoji-mart": "^2.8.1",
     "estraverse-fb": "^1.3.1",
     "file-loader": "^0.11.2",
     "foundation-sites": "git+https://github.com/steemit/foundation-sites.git#e8e32c715bbc4c822b80b555345f61337269ca78",
