--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@whaleshares/wlsjs": "^0.1.1",
     "assert": "^1.3.0",
     "autoprefixer-loader": "^3.2.0",
+    "aws-sdk": "^2.348.0",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.20.0",
     "babel-eslint": "^6.0.4",
